2009-01-13 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add logic
  * Add tests
  * Add gemspec
  * Update README