@@ -1,7 +1,7 @@
 Gem::Specification.new do |s|
   s.name    = 'validates_as_hostname_label'
-  s.version = '1.0.0'
-  s.date    = '2009-01-13'
+  s.version = '1.0.1'
+  s.date    = '2009-01-14'
   
   s.summary     = 'Checks for valid hostname labels'
   s.description = 'Checks for valid hostname labels'
